reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_tuple12.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::basic::TestStructWithTuple12"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::basic::TestStructWithTuple12"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::basic::TestStructWithTuple12",
        "fields": {
          "named": [
            {
              "name": "_f",
              "type": {
                "name": "std::tuple::Tuple12",
                "arguments": [
                  {
                    "name": "u8"
                  },
                  {
                    "name": "std::string::String"
                  },
                  {
                    "name": "u8"
                  },
                  {
                    "name": "std::string::String"
                  },
                  {
                    "name": "u8"
                  },
                  {
                    "name": "std::string::String"
                  },
                  {
                    "name": "u8"
                  },
                  {
                    "name": "std::string::String"
                  },
                  {
                    "name": "u8"
                  },
                  {
                    "name": "std::string::String"
                  },
                  {
                    "name": "u8"
                  },
                  {
                    "name": "std::string::String"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "std::tuple::Tuple12",
        "description": "Tuple holding 12 elements",
        "parameters": [
          {
            "name": "T1"
          },
          {
            "name": "T2"
          },
          {
            "name": "T3"
          },
          {
            "name": "T4"
          },
          {
            "name": "T5"
          },
          {
            "name": "T6"
          },
          {
            "name": "T7"
          },
          {
            "name": "T8"
          },
          {
            "name": "T9"
          },
          {
            "name": "T10"
          },
          {
            "name": "T11"
          },
          {
            "name": "T12"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::basic::TestStructWithTuple12",
        "fields": {
          "named": [
            {
              "name": "_f",
              "type": {
                "name": "std::tuple::Tuple12",
                "arguments": [
                  {
                    "name": "u8"
                  },
                  {
                    "name": "std::string::String"
                  },
                  {
                    "name": "u8"
                  },
                  {
                    "name": "std::string::String"
                  },
                  {
                    "name": "u8"
                  },
                  {
                    "name": "std::string::String"
                  },
                  {
                    "name": "u8"
                  },
                  {
                    "name": "std::string::String"
                  },
                  {
                    "name": "u8"
                  },
                  {
                    "name": "std::string::String"
                  },
                  {
                    "name": "u8"
                  },
                  {
                    "name": "std::string::String"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "std::tuple::Tuple12",
        "description": "Tuple holding 12 elements",
        "parameters": [
          {
            "name": "T1"
          },
          {
            "name": "T2"
          },
          {
            "name": "T3"
          },
          {
            "name": "T4"
          },
          {
            "name": "T5"
          },
          {
            "name": "T6"
          },
          {
            "name": "T7"
          },
          {
            "name": "T8"
          },
          {
            "name": "T9"
          },
          {
            "name": "T10"
          },
          {
            "name": "T11"
          },
          {
            "name": "T12"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
